Thème default: - Fix responsive support - Fix responsive forum - Modification de la scrollbar

--- a/theme/default/assets/css/custom.css
+++ b/theme/default/assets/css/custom.css
@@ -135,6 +135,24 @@ blockquote{
     width: 80% !important;
 }
 
+/* ==> SCROLLBAR */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--main-color-bg);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--active-color);
+}
 /* ==> CKEditor */
 
 .ck-editor strong {
